...
            color: kYellow,
            border: Border.fromBorderSide(BorderSide(color: kBlack, width: 3)),
            boxShadow: [kShadow],
          ),
          child: Center(
            child: Text(
              isLastPage ? 'START' : 'CONTINUE',
              style: const TextStyle(
                fontSize: 16,
                fontWeight: FontWeight.w900,
                color: kBlack,
                letterSpacing: 2,
              ),
...
